--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.h2database</groupId>
