--- a/src/main/resources/props/razykrashka.yaml
+++ b/src/main/resources/props/razykrashka.yaml
@@ -4,6 +4,7 @@ razykrashka:
     token: 907733174:AAFAIDrzekSVURj58e6APqgCRx0Nu3gNdy0
     meeting:
       session: 20
+      view-per-page: 3
   group:
     id: -1001385267248
     meeting:
