--- a/src/main/resources/props/job.yaml
+++ b/src/main/resources/props/job.yaml
@@ -1,3 +1,9 @@
 job:
-  enabled: false
-  rate: PT15S
+  meeting:
+    notification:
+      available:
+        enabled: false
+        rate: PT15S
+      upcoming:
+        enabled: true
+        rate: PT15S
