Optimize job properties

--- a/src/main/resources/props/razykrashka.yaml
+++ b/src/main/resources/props/razykrashka.yaml
@@ -9,3 +9,12 @@ razykrashka:
     id: -1001385267248
     meeting:
       notification: false
+  job:
+    meeting:
+      notification:
+        available:
+          enabled: false
+          rate: PT15S
+        upcoming:
+          enabled: true
+          rate: PT15S
