Time verification during SBS

--- a/src/main/resources/props/razykrashka.yaml
+++ b/src/main/resources/props/razykrashka.yaml
@@ -5,6 +5,9 @@ razykrashka:
     meeting:
       session: 20
       view-per-page: 4
+      creation:
+        upper-hour-limit-today: 15
+        hour-advance: 5
   group:
     id: -1001385267248
     meeting:
