--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /.idea/
 /src/main/resources/application.properties
+/src/main/resources/application-test.properties
+/src/main/resources/application-dev.properties
+/src/main/resources/props
 /razykrashka-bot.iml
 /target/
