--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
